plugins/groovy/testdata/highlighting/RegexInCommandArg.groovy
print <error descr="';' or new line expected">$/abc/$</error>
print <error descr="';' or new line expected">$/a$bc/$</error>